--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<h1>Test</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>title</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="style.css" type="text/css">
+  </head>
+  <body>
+    <nav>
+      <h1>Letti Kittel is D0p3!</h1>
+    </nav>
+    <section class="content">
+      <h2>Here's the goss about Letti around the swamp...</h2>
+      
+      <ul>
+        <li>Goss1</li>
+        <li>Goss2</li>
+        <li>Goss3</li>
+        <li>Goss4</li>
+      </ul>
+
+      <h2>Generate your own goss!</h2>
+      <p>GENERATED GOSS HERE</p>
+      <button>Generate!</button>
+
+      <footer>Da footer</footer>
+    </section>
+  </body>
+</html>
