--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <h1>Letti Kittel is D0p3!</h1>
+      <h1>Letti Kittel's Sexy Internet Corner</h1>
     </nav>
     <section class="content">
       <h2>Here's the goss about Letti around the swamp...</h2>
@@ -27,5 +27,7 @@
 
       <footer>Da footer</footer>
     </section>
+
+    <script src="./letti.js"></script>
   </body>
 </html>
