add ability to customize background, styling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-    <nav>
+    <section id="title">
       <h1>Letti Kittel's Sexy Internet Corner</h1>
-    </nav>
-    <section class="content">
-      <h2>Here's the goss about Letti around the swamp...</h2>
+    </section>
+
+    <section id="buttons">
+      <button>Generate Compliment!</button>
+      <button id="background">New Sexy Background!</button>
+    </section>
+  
+    <section id="content">
+      <h2>Generated Sexy Compliment:</h2>
+      <p id="compliment"></p>
+
+      <h2>What the Swamp says about Letti:</h2>
       
       <ul>
         <li>Goss1</li>
@@ -21,11 +30,6 @@
         <li>Goss4</li>
       </ul>
 
-      <h2>Generate your own goss!</h2>
-      <p>GENERATED GOSS HERE</p>
-      <button>Generate!</button>
-
-      <footer>Da footer</footer>
     </section>
 
     <script src="./letti.js"></script>
