add friend compliment list (missing some friend answers)

--- a/index.html
+++ b/index.html
@@ -21,14 +21,9 @@
       <h2>Generated Sexy Compliment:</h2>
       <p id="compliment"></p>
 
-      <h2>What the Swamp says about Letti:</h2>
+      <h2>What the Swamp has to say about Letti:</h2>
       
-      <ul>
-        <li>Goss1</li>
-        <li>Goss2</li>
-        <li>Goss3</li>
-        <li>Goss4</li>
-      </ul>
+      <ul id="friend-compliments"></ul>
 
     </section>
 
