add random compliment generation and some default compliments

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </section>
 
     <section id="buttons">
-      <button>Generate Compliment!</button>
-      <button id="background">New Sexy Background!</button>
+      <button id="compliment-button">Generate Compliment!</button>
+      <button id="background-button">New Sexy Background!</button>
     </section>
   
     <section id="content">
       <h2>Generated Sexy Compliment:</h2>
-      <p id="compliment"></p>
+      <p id="random-compliment"></p>
 
       <h2>What the Swamp has to say about Letti:</h2>
       
