add animations, styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <section id="title">
-      <h1>Letti Kittel's Sexy Internet Corner</h1>
+      <h1>Letti's Sexy Internet Corner</h1>
+      <img id="background-image" src="" alt="sexy background">
     </section>
 
     <section id="buttons">
@@ -19,7 +20,7 @@
   
     <section id="content">
       <h2>Generated Sexy Compliment:</h2>
-      <p id="random-compliment"></p>
+      <p id="random-compliment" class="random-compliment-animation"></p>
 
       <h2>What the Swamp has to say about Letti:</h2>
       
