styling, add compliments

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </section>
 
     <section id="buttons">
-      <button id="compliment-button">Generate Compliment!</button>
-      <button id="background-button">New Sexy Background!</button>
+      <button id="compliment-button">Randomize Compliment!</button>
+      <button id="background-button">Change Sexy Background!</button>
     </section>
   
     <section id="content">
-      <h2>Generated Sexy Compliment:</h2>
+      <h2>Random Sexy Compliment</h2>
       <p id="random-compliment" class="random-compliment-animation"></p>
 
-      <h2>What the Swamp has to say about Letti:</h2>
+      <h2>Sexy Swamp Sayings</h2>
       
       <ul id="friend-compliments"></ul>
 
